force-app/main/default/objects/Proposal__c/fields/Proposal_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Generated_Date__c</fullName>
    <label>Proposal Generated Date</label>
    <type>DateTime</type>
</CustomField>