force-app/main/default/objects/Proposal__c/fields/Proposal_Locked__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Locked__c</fullName>
    <formula>IF(ISPICKVAL(Stage__c,&quot;Not Started&quot;), &quot;UNLOCKED&quot;,
IF(ISPICKVAL(Stage__c,&quot;Quoting&quot;), &quot;UNLOCKED&quot;,
IF(ISPICKVAL(Stage__c, &quot;Revision&quot;), &quot;UNLOCKED&quot;, &quot;LOCKED&quot;)))</formula>
    <label>Proposal Locked</label>
    <type>Text</type>
</CustomField>