force-app/main/default/objects/Proposal__c/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <formula>IF(
 TODAY() - DATEVALUE(Proposal_Generated_Date__c )&lt;=  30  &amp;&amp; NOT(ISBLANK(Proposal_Generated_Date__c)) , &quot;Active&quot;, 
IF(
TODAY() - DATEVALUE(Proposal_Generated_Date__c ) &gt;   30  &amp;&amp; NOT(ISBLANK(Proposal_Generated_Date__c)),&quot;Expired&quot;, NULL))</formula>
    <label>Proposal Status</label>
    <type>Text</type>
</CustomField>