force-app/main/default/objects/Proposal__c/fields/Proposal_Validation__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Validation__c</fullName>
    <formula>IF(
 Last_Comp_Added__c  &gt;   Proposal_Generated_Date__c  , &quot;INVALID&quot;, &quot;VALID&quot;)</formula>
    <label>Proposal Validation</label>
    <type>Text</type>
</CustomField>