force-app/main/default/objects/Proposal__c/fields/Proposed_Effective__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Effective__c</fullName>
    <formula>text( Proposed_Effective_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Effective</label>
    <type>Text</type>
</CustomField>