force-app/main/default/objects/Proposal__c/fields/Proposed_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Exp_Date__c</fullName>
    <label>Proposed Exp Date</label>
    <type>Date</type>
</CustomField>