force-app/main/default/objects/Proposal__c/fields/Quote_Template__c.field-meta.xml
<CustomField>
    <fullName>Quote_Template__c</fullName>
    <formula>Pricing_Detail_Template__r.Id</formula>
    <label>Quote Template</label>
    <type>Text</type>
</CustomField>