force-app/main/default/objects/Proposal__c/fields/Quote_Type_Identified__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Type Identified</label>
    <type>Checkbox</type>
</CustomField>