force-app/main/default/objects/Proposal__c/fields/Recommended_Premium__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Premium__c</fullName>
    <formula>Carrier_Cost__c + Average_Developed_Losses_Per_Year__c + State_SurchargeAssessment_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Carrier Cost + Avg Dev Losses Per Year + State Assessment Fees</inlineHelpText>
    <label>Recommended Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>