force-app/main/default/objects/Proposal__c/fields/Replacement_Check_Fee__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Check_Fee__c</fullName>
    <defaultValue>35</defaultValue>
    <label>Replacement Check Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>