force-app/main/default/objects/Proposal__c/fields/Report_Opportunity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Report_Opportunity_Detail__c</fullName>
    <formula>Opportunity__r.Name  &amp; BR() &amp;
&quot;Quote Type: &quot; &amp;  text(Quote_Type__c ) &amp; BR() &amp;
&quot;P&amp;L Required: &quot; &amp; No_Loss_Affidavit__c &amp; BR() &amp;
&quot;# of EE: &quot; &amp;  text(Total_of_Employees__c) &amp; BR() &amp;
&quot;Gross Wages: &quot; &amp;  text(Total_Gross_Wages__c )</formula>
    <label>Report Opportunity Detail</label>
    <type>Text</type>
</CustomField>