force-app/main/default/objects/Proposal__c/fields/Retrieve_Pricing_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Retrieve_Pricing_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrieve Pricing Sheet</label>
    <type>Checkbox</type>
</CustomField>