force-app/main/default/objects/Proposal__c/fields/Sales_Decline_Note__c.field-meta.xml
<CustomField>
    <fullName>Sales_Decline_Note__c</fullName>
    <label>Sales Decline Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>