force-app/main/default/objects/Proposal__c/fields/Sales_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sales_Decline_Reason__c</fullName>
    <label>Sales Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UW_Decline_Reason</valueSetName>
    </valueSet>
</CustomField>