force-app/main/default/objects/Proposal__c/fields/Sales_Premium__c.field-meta.xml
<CustomField>
    <fullName>Sales_Premium__c</fullName>
    <label>Sales Premium</label>
    <summarizedField>WC_Rate__c.Sales_Premium__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>