force-app/main/default/objects/Proposal__c/fields/Sales_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Qualified_Date__c</fullName>
    <label>Sales Qualified Date</label>
    <type>Date</type>
</CustomField>