force-app/main/default/objects/Proposal__c/fields/Secretary_of_State_Corporation_Search__c.field-meta.xml
<CustomField>
    <fullName>Secretary_of_State_Corporation_Search__c</fullName>
    <formula>&quot;https://www.secstates.com/&quot;&amp;text(Opportunity__r.Account.BillingStateCode)&amp;&quot;_&quot;&amp;Opportunity__r.Account.State__c&amp;&quot;_Secretary_of_State_Corporation_Search&quot;</formula>
    <label>Secretary of State Corporation Search</label>
    <type>Text</type>
</CustomField>