force-app/main/default/objects/Proposal__c/fields/Security_Deposit_Waived__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Waived__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Security Deposit Waived</label>
    <type>Checkbox</type>
</CustomField>