force-app/main/default/objects/Proposal__c/fields/Selected_Losses__c.field-meta.xml
<CustomField>
    <fullName>Selected_Losses__c</fullName>
    <label>Selected Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>