force-app/main/default/objects/Proposal__c/fields/SOC_Status__c.field-meta.xml
<CustomField>
    <fullName>SOC_Status__c</fullName>
    <label>Sales Office Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Additional Info Required</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>