force-app/main/default/objects/Proposal__c/fields/State_SurchargeAssessment_Fees__c.field-meta.xml
<CustomField>
    <fullName>State_SurchargeAssessment_Fees__c</fullName>
    <inlineHelpText>Total of WC Rate Surcharge/Assessment Fees</inlineHelpText>
    <label>State Surcharge/Assessment Fees</label>
    <summarizedField>WC_Rate__c.Estimated_Ann_Surcharge_Assessment_Fees__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>