force-app/main/default/objects/Proposal__c/fields/Termination_Fee_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Per_Employee__c</fullName>
    <description>Fee charged when an employee is termed</description>
    <label>Termination Fee Per Employee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>