force-app/main/default/objects/Proposal__c/fields/Termination_Fee_Per_Employee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Per_Employee_Percentage__c</fullName>
    <description>When termination fee is based off of percentage</description>
    <label>Termination Fee Per Employee: Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>