force-app/main/default/objects/Proposal__c/fields/Termination_Fee_Per_Employee_Waived__c.field-meta.xml
<CustomField>
    <fullName>Termination_Fee_Per_Employee_Waived__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When fee is waived, check this box.</description>
    <label>Termination Fee Per Employee: Waived</label>
    <type>Checkbox</type>
</CustomField>