force-app/main/default/objects/Proposal__c/fields/to_Profit_Target__c.field-meta.xml
<CustomField>
    <fullName>to_Profit_Target__c</fullName>
    <formula>Profit_Per_EE__c - Pricing_Matrix__r.Price_per_EE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ to Profit Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>