force-app/main/default/objects/Proposal__c/fields/Total_Bill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Amount__c</fullName>
    <formula>CASE(Quote_Type__c, 
&quot;PEO W/O COMP&quot;,Trion_Admin_Fee__c + Trion_SUTA_Bill_Cost__c + EPLI__c,
&quot;ASO&quot;, Trion_Admin_Fee__c + Trion_SUTA_Bill_Cost__c, 
&quot;PEO&quot;,Trion_Admin_Fee__c + Trion_SUTA_Bill_Cost__c + EPLI__c +  Bill_Premium__c,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Bill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>