force-app/main/default/objects/Proposal__c/fields/Total_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Rate__c</fullName>
    <formula>IF(
ISPICKVAL( Quote_Type__c, &quot;PEO&quot;) &amp;&amp;
EPLI_Waived__c = FALSE, Employment_Practice_Liability_Insurance__c + FICA__c + FUTA__c + Medicare__c + Admin_Fee_Gross_Wages__c,
IF(
ISPICKVAL( Quote_Type__c, &quot;PEO W/O COMP&quot;) &amp;&amp;
EPLI_Waived__c = FALSE, Employment_Practice_Liability_Insurance__c + FICA__c + FUTA__c + Medicare__c + Admin_Fee_Gross_Wages__c,
FICA__c + FUTA__c + Medicare__c + Admin_Fee_Gross_Wages__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EPLI + FICA + FUTA + Medicare</inlineHelpText>
    <label>Total Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>