force-app/main/default/objects/Proposal__c/fields/Total_Bill_Rate_After_UI_Wage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Bill_Rate_After_UI_Wage_Limit__c</fullName>
    <formula>Total_Bill_Rate__c - FUTA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Bill Rate - FUTA</inlineHelpText>
    <label>Total Bill Rate After UI Wage Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>