force-app/main/default/objects/Proposal__c/fields/Total_Carrier_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Carrier_Cost__c</fullName>
    <formula>Carrier_Cost__c + State_SurchargeAssessment_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Carrier Cost + State Assessment Fees</inlineHelpText>
    <label>Total Carrier Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>