force-app/main/default/objects/Proposal__c/fields/Total_Developed_Losses__c.field-meta.xml
<CustomField>
    <fullName>Total_Developed_Losses__c</fullName>
    <label>Total Developed Losses</label>
    <summarizedField>Loss_Year__c.Developed_Losses__c</summarizedField>
    <summaryForeignKey>Loss_Year__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>