force-app/main/default/objects/Proposal__c/fields/TOTAL_ESTIMATED_ANNUAL_PREMIUM_ALL_STATE__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_ESTIMATED_ANNUAL_PREMIUM_ALL_STATE__c</fullName>
    <label>TOTAL ESTIMATED ANNUAL PREMIUM ALL STATE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>