force-app/main/default/objects/Proposal__c/fields/Total_Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Wages__c</fullName>
    <formula>IF(
ISPICKVAL(Quote_Type__c , &quot;PEO&quot;),  Total_WC_Gross_Wages__c  ,
IF(
ISPICKVAL(Quote_Type__c , &quot;PEO W/O COMP&quot;),  Total_Wages_w_o_Comp__c ,
IF(
ISPICKVAL(Quote_Type__c , &quot;ASO&quot;), Total_Wages_w_o_Comp__c , NULL)))</formula>
    <label>Total Gross Wages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>