force-app/main/default/objects/Proposal__c/fields/Total_of_Claims__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Claims__c</fullName>
    <label>Total # of Claims</label>
    <summarizedField>Loss_Year__c.of_Claims__c</summarizedField>
    <summaryForeignKey>Loss_Year__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>