force-app/main/default/objects/Proposal__c/fields/Total_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Employees__c</fullName>
    <formula>IF(
ISPICKVAL(Quote_Type__c , &quot;PEO&quot;),  Total_WC_Number_of_Employees__c,of_Employees_w_o_comp__c)</formula>
    <label>Total # of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>