force-app/main/default/objects/Proposal__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <formula>CASE(Quote_Type__c,
&quot;PEO&quot;,  (Trion_Admin_Fee__c + Trion_SUTA_Bill_Cost__c + EPLI__c + Bill_Premium__c ) - (Commission__c + Trion_SUTA_Cost__c + EPLI__c + Final_Recommended_Premium__c),(Trion_Admin_Fee__c + Trion_SUTA_Bill_Cost__c + EPLI__c ) - (Commission__c + Trion_SUTA_Cost__c + EPLI__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>