force-app/main/default/objects/Proposal__c/fields/Total_Trion_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Trion_Cost__c</fullName>
    <formula>CASE(Quote_Type__c, 
&quot;PEO&quot;, Commission__c + Trion_SUTA_Cost__c + EPLI__c + Final_Recommended_Premium__c,Commission__c + Trion_SUTA_Cost__c + EPLI__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commission + SUTA Cost + EPLI + Recommended Premium</inlineHelpText>
    <label>Total Trion Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>