force-app/main/default/objects/Proposal__c/fields/Total_Wages_w_o_Comp__c.field-meta.xml
<CustomField>
    <fullName>Total_Wages_w_o_Comp__c</fullName>
    <label>Total Wages w/o Comp</label>
    <summarizedField>SUTA_Quote__c.Gross_Wages__c</summarizedField>
    <summaryForeignKey>SUTA_Quote__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>