force-app/main/default/objects/Proposal__c/fields/Total_WC_Gross_Wages__c.field-meta.xml
<CustomField>
    <fullName>Total_WC_Gross_Wages__c</fullName>
    <label>Total Wages w comp</label>
    <summarizedField>SUTA_Quote__c.Total_WC_Gross_Wages__c</summarizedField>
    <summaryForeignKey>SUTA_Quote__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>