force-app/main/default/objects/Proposal__c/fields/Total_WC_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_WC_Number_of_Employees__c</fullName>
    <label>Total # of Employees w Comp</label>
    <summarizedField>SUTA_Quote__c.Total_WC_Number_of_Employees__c</summarizedField>
    <summaryForeignKey>SUTA_Quote__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>