force-app/main/default/objects/Proposal__c/fields/Trion_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Trion_Admin_Fee__c</fullName>
    <formula>IF(
ISPICKVAL( Administrative_Fee_Type__c, &quot;Gross Wages&quot;),  Admin_Fee_Gross_Wages__c * Total_Gross_Wages__c,  Admin_Fee_Per_Check_Annual__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trion Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>