force-app/main/default/objects/Proposal__c/fields/Trion_Bill_Per_EE__c.field-meta.xml
<CustomField>
    <fullName>Trion_Bill_Per_EE__c</fullName>
    <formula>Total_Bill_Amount__c / Total_of_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Bill Amount / # of EE</inlineHelpText>
    <label>Trion Bill Per EE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>