force-app/main/default/objects/Proposal__c/fields/Trion_Cost_Per_Employee__c.field-meta.xml
<CustomField>
    <fullName>Trion_Cost_Per_Employee__c</fullName>
    <formula>(EPLI__c + Trion_SUTA_Cost__c + Commission__c + Final_Recommended_Premium__c ) / Total_of_Employees__c</formula>
    <inlineHelpText>( EPLI+ SUTA Cost +Final Recommended Premium +  Commission) / # of EE</inlineHelpText>
    <label>Trion Cost Per Employee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>