force-app/main/default/objects/Proposal__c/fields/Trion_Manual_Premium__c.field-meta.xml
<CustomField>
    <fullName>Trion_Manual_Premium__c</fullName>
    <formula>Manual_Premium__c + State_SurchargeAssessment_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Manual Premium + State Surcharge/Assessment Fees</inlineHelpText>
    <label>Trion Manual Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>