force-app/main/default/objects/Proposal__c/fields/Trion_SUTA_Bill_Cost__c.field-meta.xml
<CustomField>
    <fullName>Trion_SUTA_Bill_Cost__c</fullName>
    <inlineHelpText>Taxable Wages * SUTA Bill Rate</inlineHelpText>
    <label>Trion SUTA Bill</label>
    <summarizedField>SUTA_Quote__c.Trion_SUTA_Bill_Amount__c</summarizedField>
    <summaryForeignKey>SUTA_Quote__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>