force-app/main/default/objects/Proposal__c/fields/Underwriting_Premium__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Premium__c</fullName>
    <label>Underwriting Premium</label>
    <summarizedField>WC_Rate__c.Underwriting_Premium__c</summarizedField>
    <summaryForeignKey>WC_Rate__c.Proposal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>