force-app/main/default/objects/Proposal__c/fields/Underwriting_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Qualified_Date__c</fullName>
    <label>Underwriting Decision Date</label>
    <type>Date</type>
</CustomField>