force-app/main/default/objects/Proposal__c/fields/Underwriting_Status__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Status__c</fullName>
    <label>Underwriting Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Additional Info Requested</fullName>
            </value>
            <value>
                <fullName>Submitted to Carrier</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Disqualified Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>