force-app/main/default/objects/Proposal__c/fields/UW_Disqualification_Override_by__c.field-meta.xml
<CustomField>
    <fullName>UW_Disqualification_Override_by__c</fullName>
    <label>UW Disqualification Override by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>