force-app/main/default/objects/Proposal__c/fields/UW_Other_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>UW_Other_Decline_Reason__c</fullName>
    <label>UW Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>