force-app/main/default/objects/Proposal__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Version #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>