force-app/main/default/objects/Proposal__c/fields/Worker_s_Comp_Claims_Fee_Deposit_Waived__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Comp_Claims_Fee_Deposit_Waived__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When not requiring a deposit, check this box.</description>
    <label>Worker&apos;s Comp Claims Fee Deposit: Waived</label>
    <type>Checkbox</type>
</CustomField>