force-app/main/default/objects/Proposal__c/fields/Worker_s_Compensation_Claims_Fee_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Compensation_Claims_Fee_Deposit__c</fullName>
    <description>Deposit amount to cover workers comp claims</description>
    <label>Worker&apos;s Compensation Claims Fee Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>