force-app/main/default/objects/Proposal__c/fields/Worker_s_Compensation_Claims_Fee_Max__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Compensation_Claims_Fee_Max__c</fullName>
    <description>Maximum Fee to be charged to client per individual workers compensation claim.</description>
    <label>Worker&apos;s Compensation Claims Fee: Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>