force-app/main/default/objects/Proposal__c/fields/Worker_s_Compensation_Claims_Fee_waived__c.field-meta.xml
<CustomField>
    <fullName>Worker_s_Compensation_Claims_Fee_waived__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this box when waiving the per claim fee for workers comp.</description>
    <label>Worker&apos;s Compensation Claims Fee: waived</label>
    <type>Checkbox</type>
</CustomField>