force-app/main/default/objects/Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>SOC_Status__c</columns>
    <columns>Underwriting_Status__c</columns>
    <columns>Stage__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Current_Policy_Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>EPLI_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>