force-app/main/default/objects/Proposal__c/listViews/Client_Presentation.listView-meta.xml
<ListView>
    <fullName>Client_Presentation</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Administrative_Fee_Type__c</columns>
    <columns>SOC_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Underwriting_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Client Presentation</value>
    </filters>
    <label>Client Presentation</label>
    <sharedTo>
        <group>SOC</group>
    </sharedTo>
</ListView>