force-app/main/default/objects/Proposal__c/listViews/Needs_Analysis.listView-meta.xml
<ListView>
    <fullName>Needs_Analysis</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Administrative_Fee_Type__c</columns>
    <columns>SOC_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SOC_Status__c</field>
        <operation>equals</operation>
        <value>Needs Analysis</value>
    </filters>
    <label>Needs Analysis</label>
    <sharedTo>
        <group>SOC</group>
    </sharedTo>
</ListView>