force-app/main/default/objects/Proposal__c/listViews/Proposal_Accepted.listView-meta.xml
<ListView>
    <fullName>Proposal_Accepted</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>SOC_Status__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Underwriting_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Proposal Accepted</value>
    </filters>
    <label>Proposal Accepted</label>
    <sharedTo>
        <group>SOC</group>
    </sharedTo>
</ListView>