force-app/main/default/objects/Proposal__c/listViews/Proposal_Revision.listView-meta.xml
<ListView>
    <fullName>Proposal_Revision</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Stage__c</columns>
    <columns>Quote_Type__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Administrative_Fee_Type__c</columns>
    <columns>SOC_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Revision</value>
    </filters>
    <label>Proposal Revision</label>
    <sharedTo>
        <group>Sales_Office</group>
    </sharedTo>
</ListView>